# Scrapy_web_scraping-

./: README.md  app.py  pyproject.toml  requirements.txt  run_spider.py
scraper/: settings.py
scraper/spiders/: dynamic_spider.py  static_spider.py
