[project]
name = "web_scraping_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "scrapy>=2.14.2",
    "scrapy-playwright>=0.0.46",
    "streamlit>=1.55.0",
]
